--- a/style.css
+++ b/style.css
@@ -29,3 +29,17 @@ form{
     display: flex;
     justify-content: space-between;
 }
+
+table {
+    border-collapse: collapse;
+    width: 100%;
+  }
+  
+  th, td {
+    text-align: left;
+    padding: 8px;
+  }
+  
+  tr:nth-child(even) {
+    background-color: #f2f2f2;
+}
