--- a/style.css
+++ b/style.css
@@ -7,15 +7,13 @@
 form{
     display: flex;
     justify-content: space-around;
-    border: 1px solid gray;
-    border-radius: 10px;
     padding: 10px;
 }
 
 .left{
     display: flex;
     flex-direction: column;
-
+    
     justify-content: space-evenly;
 }
 .right{
@@ -31,15 +29,20 @@ form{
 }
 
 table {
-    border-collapse: collapse;
+    /* border-collapse: collapse; */
     width: 100%;
-  }
-  
-  th, td {
+}
+
+th, td {
     text-align: left;
     padding: 8px;
-  }
-  
-  tr:nth-child(even) {
+}
+
+tr:nth-child(even) {
     background-color: #f2f2f2;
+}
+
+table{
+    border: 1px solid gray;
+    border-radius: 5px;    
 }
