--- a/scanStyle.css
+++ b/scanStyle.css
@@ -9,6 +9,8 @@
 body {
     margin: 0;
     font-size: 1.3rem;
+    background: #4d526b;
+
 }
 
 img {
@@ -56,6 +58,8 @@ h1 {
   display: flex;
   justify-content: space-around;
   /* background-color: #455565; */
+  background: #4d526b;
+
   
 }
 .time-display {
@@ -99,6 +103,7 @@ form{
     flex-direction: column;
     justify-content: space-between;
     padding: 15px;
+    background-color: white;
 }
 
 .formLine{
@@ -148,9 +153,16 @@ min-width: 110px;
     justify-content: space-between;
 }
 
+#dataTable, #logTable{
+    background-color: white;
+    border-radius: 10px;
+    padding: 10px;
+}
+
 table {
     /* border-collapse: collapse; */
     width: 100%;
+    
 }
 
 th, td {
@@ -160,6 +172,9 @@ th, td {
 
 tr:nth-child(even) {
     background-color: #f2f2f2;
+}
+tr:nth-child(odd) {
+    background-color: white;
 }
 
 table{
