--- a/scanStyle.css
+++ b/scanStyle.css
@@ -64,6 +64,15 @@ h1 {
     color: #455565;
 }
 
+.btn {
+    display: none; 
+    /* Hide all buttons by default */
+}
+
+#HOME, #BACK, .visable  {
+    display: block; /* Home is always visible */
+}
+
 .lbg{
     background-color: #4d526b;
     color: white;
@@ -83,9 +92,16 @@ h1 {
   justify-content: space-around;
   border-radius: 20px;
   padding: 10px;
-
-  
 }
+
+.listHeader{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.listHeader h2{color: white;}
+
 .time-display {
     background-color: #f5f5f5;
     border: 1px solid #ddd;
@@ -117,8 +133,16 @@ font-weight: 700;
 header {
     background: #4d526b;
     padding: 1em 0;
-    text-align: center;
     color: white;
+    display: flex;
+    justify-content: space-between;
+    padding: 2rem 5rem;
+}
+
+header .buttons{
+    display: flex;
+    align-items: center;
+    gap: 10px;
 }
 
 form{
@@ -128,6 +152,23 @@ form{
     justify-content: space-between;
     padding: 15px;
     background-color: white;
+}
+
+.userSelect{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    padding: 0;
+
+}
+
+.userRadio{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    gap: 5px;
+    padding: 5px;
 }
 
 .formLine{
